<resources>
    <string name="app_name">Notes</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="msg_add_note">Click the button at the bottom to add a new note</string>
    <string name="empty_label">Click the button at the bottom to add a new Label</string>
    <string name="add_new_note">add new note</string>
    <string name="done">done</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="content">Content</string>
    <string name="last_edited">Last Edited</string>
    <string name="search">search</string>
    <string name="settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="clone">Make a copy</string>
    <string name="add_checkbox">Add CheckBox</string>
    <string name="share">Share</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="color">Color</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkbox">CheckBox</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="remove_checkbox">"Are you sure you want to remove all the checkboxes"</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="more">More</string>
    <string name="add_label">Add Label</string>
    <string name="notes_added">Notes Added</string>
    <string name="title_activity_test_navigationctivity">TestNavigationctivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="label_title">Label Title</string>
    <string name="create_new_label">Create new label</string>
    <string name="to_do">To Do</string>
    <string name="job_name">Job Name</string>
    <string name="no_notes">No matching notes</string>
    <string name="no_labels">No Labels</string>
    <string name="error_message">Error message</string>
    <string name="generate_checkboxes">Generate CheckBoxes</string>
    <string name="add_checkboxes">Add CheckBoxes</string>
    <string name="create_label">Create label</string>
    <string name="label_name">label name</string>
    <string name="remove_checkboxes">Remove Checkboxes</string>
    <string name="empty_note">Note is Empty</string>
    <string name="confirm_deletion">Confirm Deletion</string>
</resources>