<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/cvlvNoteCardItem"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:theme="@style/Theme.MaterialComponents.DayNight"
    android:elevation="150dp"
    app:cardCornerRadius="10dp">


    <TextView
        android:id="@+id/tvListItemTitleExt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/title" />

    <TextView
        android:id="@+id/tvListItemDateExt"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mi_gray"
        android:textSize="12sp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/tvListItemTimeExt"
        android:textSize="12sp"
        android:layout_marginEnd="12dp"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="310dp"
        android:layout_height="wrap_content"
        android:textColor="@color/mi_gray"
        android:text="@string/time" />


</com.google.android.material.card.MaterialCardView>