<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarkLabelActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/app_yellow"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Select Labels"
        app:titleTextColor="@color/white" />


    <SearchView
        android:id="@+id/svSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/background_grey"
        android:closeIcon="@drawable/ic_baseline_close_black_24"
        android:queryHint="@string/label_title"
        android:searchHintIcon="@android:color/transparent"
        android:searchIcon="@drawable/ic_black_search_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSL" />

    <ScrollView
        android:id="@+id/scrollLabelSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="setSearchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svSelection">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLabelSelection"
            android:layout_width="match_parent"
            android:layout_height="607dp" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/llUnknownLabel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background_grey"
        android:onClick="createUnknownLabel"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollLabelSelection">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_baseline_add_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/create_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvUnknownLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:gravity="center_vertical"
            android:text="@string/label_name"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>