<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:id="@+id/clNewNote"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEditNote"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_yellow"
        android:elevation="4dp" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">
        <LinearLayout
            android:id="@+id/llNoteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/title"
                android:maxLength="38"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="24sp"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etContent"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                android:maxLines="2000"
                android:maxLength="10000"
                android:autoLink="web|email"
                android:linksClickable="true"
                android:hint="@string/content"
                tools:ignore="Autofill,LabelFor"
                android:inputType="textMultiLine" />

            <ProgressBar
                android:id="@+id/pbChangeContent"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <FrameLayout
                android:layout_marginTop="20dp"
                android:id="@+id/flToDosContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to_do"
                            android:textSize="18sp"
                            android:fontFamily="@font/roboto"
                            android:layout_gravity="center"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/rvToDosContent"
                            tools:itemCount="5"
                            tools:listitem="@layout/item_todo" />

                        <ImageView
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_width="24dp"
                            android:onClick="addToDo"
                            android:focusable="true"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_add_check_box_24"
                            android:layout_gravity="bottom|end" />
                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAddedLabels"
                tools:listitem="@layout/item_simple_label"
                tools:itemCount="4"
                android:layout_marginTop="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <TextView
        android:id="@+id/tvLastEdited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/last_edited"
        android:layout_marginBottom="12dp"
        android:textAlignment="center"
        android:layout_gravity="bottom|center"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>